First pass at advanced settings panel.

--- a/src/generic_ui/polymer/settings.html
+++ b/src/generic_ui/polymer/settings.html
@@ -1,10 +1,11 @@
-<link rel="import" href="../../bower/polymer/polymer.html">
+<link rel='import' href='../../bower/polymer/polymer.html'>
+<link rel='import' href='../../bower/paper-input/paper-autogrow-textarea.html'>
 <link rel='import' href='../../bower/paper-button/paper-button.html'>
 <link rel='import' href='../../bower/paper-checkbox/paper-checkbox.html'>
 <link rel='import' href='../../bower/paper-input/paper-input-decorator.html'>
 <link rel='import' href='../../bower/core-icons/core-icons.html'>
-<link rel="import" href='description.html'>
-<link rel="import" href="faq-link.html">
+<link rel='import' href='description.html'>
+<link rel='import' href='faq-link.html'>
 <link rel='import' href='link.html'>
 
 <polymer-element name='uproxy-settings'>
@@ -94,7 +95,7 @@
       margin-top: 1px;
       margin-left: 1px;
     }
-    #metricsCheckbox core-icon[icon="help"]{
+    #metricsCheckbox core-icon[icon='help']{
       height: 15px;
       color: grey;
       opacity: 0.6;
@@ -104,11 +105,26 @@
       -moz-transition: all 0.23s !important;
       transition: all 0.23s !important;
     }
-    #metricsCheckbox core-icon[icon="help"]:hover {
+    #metricsCheckbox core-icon[icon='help']:hover {
       opacity: 1;
     }
     #metricsCheckbox paper-checkbox, uproxy-faq-link {
       display: table-cell;
+    }
+    #advancedSettingsDecorator {
+      height: 190px;
+    }
+    #advancedSettingsPaperTextarea {
+      height: 190px;
+      margin: 0em;
+    }
+    paper-autogrow-textarea::shadow .textarea-container {
+      padding: 0.25em;
+      background-color: rgb(240,240,240);
+    }
+    paper-autogrow-textarea::shadow .mirror-text {
+      white-space: pre-wrap; /* css-3 */
+      white-space: -moz-pre-wrap; /* Mozilla, since 1999 */
     }
     core-icon[icon=announcement],
     core-icon[icon=help],
@@ -158,44 +174,36 @@
         <hr>
 
         <uproxy-link on-tap='{{ openFeedbackForm }}' role='button'>
-          <core-icon icon="announcement"></core-icon>
+          <core-icon icon='announcement'></core-icon>
           Submit Feedback
         </uproxy-link>
 
         <uproxy-faq-link>
-          <core-icon icon="help"></core-icon>
+          <core-icon icon='help'></core-icon>
           Get Help
         </uproxy-faq-link>
 
-        <uproxy-link on-tap='{{ toggleAdvancedSettings }}' role='button'>
-          <core-icon icon="settings"></core-icon>
+        <uproxy-link on-tap='{{ openAdvancedSettingsForm }}' role='button'>
+          <core-icon icon='settings'></core-icon>
           Advanced Settings
         </uproxy-link>
-        <div id='advancedSettings' hidden?='{{!displayAdvancedSettings}}'>
-          <paper-input-decorator label="Custom STUN server">
-            <input is="core-input" value='{{stunServer}}'>
-          </paper-input-decorator>
-          <paper-button raised on-tap="{{setStunServer}}">Update</paper-button>
-          <paper-button raised on-tap="{{resetStunServers}}">Reset</paper-button>
-          <p id='confirmNewServer' class='advancedSettingsText' hidden>STUN server updated. New server will be used for future connections.</p>
-          <p id='confirmResetServers' class='advancedSettingsText' hidden>STUN servers reset. Default servers will be used for future connections.</p>
-        </div>
+
         <div id='metricsCheckbox'>
           <paper-checkbox checked='{{ model.globalSettings.statsReportingEnabled }}' label='Anonymous stats enabled'></paper-checkbox>
           <uproxy-faq-link anchor='doesUproxyLogData'>
-            <core-icon icon="help"></core-icon>
+            <core-icon icon='help'></core-icon>
           </uproxy-faq-link>
         </div>
 
         <hr>
 
-        <uproxy-link on-tap='{{ restart }}' hidden?='{{ ui.browser !== "chrome" }}' role='button'>
-          <core-icon icon="refresh"></core-icon>
+        <uproxy-link on-tap='{{ restart }}' hidden?='{{ ui.browser !== 'chrome' }}' role='button'>
+          <core-icon icon='refresh'></core-icon>
           Restart
         </uproxy-link>
 
         <uproxy-link on-tap='{{ logOut }}' role='button'>
-          <core-icon icon="settings-power"></core-icon>
+          <core-icon icon='settings-power'></core-icon>
           Log-out of uProxy
         </uproxy-link>
       </div>
