--- a/src/generic_ui/polymer/advanced-settings.html
+++ b/src/generic_ui/polymer/advanced-settings.html
@@ -4,7 +4,7 @@
 <link rel='import' href='../../bower/paper-input/paper-autogrow-textarea.html'>
 <link rel='import' href='../../bower/core-label/core-label.html'>
 <link rel='import' href='../../bower/core-tooltip/core-tooltip.html'>
-<link rel='import' href='../../bower/core3-overlay/core-overlay.html'>
+<link rel='import' href='../../bower/core-overlay/core-overlay.html'>
 <link rel='import' href='../../bower/core-signals/core-signals.html'>
 
 <polymer-element name='uproxy-advanced-settings' attributes=''>
@@ -93,10 +93,10 @@
       background-color: #009688;
     }
     #advancedSettingsDecorator {
-      height: 290px;
+      height: 350px;
     }
     #advancedSettingsPaperTextarea {
-      height: 290px;
+      height: 350px;
       margin: 0em;
     }
     paper-autogrow-textarea::shadow .textarea-container {
@@ -107,6 +107,11 @@
       white-space: pre-wrap; /* css-3 */
       white-space: -moz-pre-wrap; /* Mozilla, since 1999 */
     }
+    .advancedSettingsText {
+      font-size: 12px;
+      padding-top: 0px;
+      color: rgb(112, 112, 112);
+    }
     </style>
 
     <!-- Listen for the 'open-advanced-settings' event, which is fired by the settings page. -->
@@ -115,8 +120,7 @@
     <core-overlay id='advancedSettingsPanel'>
       <div id='container' vertical layout>
         <uproxy-app-bar on-go-back='{{ close }}'>
-          /* TODO: What should back bar do? Cancel? */
-          Submit feedback
+          Advanced settings
         </uproxy-app-bar>
         <div id='formContainer' flex>
           <p class='inputLabel'>Edit your settings below</p>
@@ -127,6 +131,8 @@
               </textarea>
             </paper-autogrow-textarea>
           </paper-input-decorator>
+          <p id='confirmSetAdvancedSettings' class='advancedSettingstext' hidden>Settings saved</p>
+          <p id='failedSetAdvancedSettings' class='advancedSettingstext' hidden>Could not set: bad format</p>
         </div> <!-- end of form container -->
         <div id='setAdvancedSettings' on-tap='{{ setAdvancedSettings }}'>SET</div>
       </div>
