--- a/src/generic_ui/polymer/root.html
+++ b/src/generic_ui/polymer/root.html
@@ -272,6 +272,11 @@
           </div>
         </core-toolbar>
 
+        <!--
+          core-header class ensures this gets inserted in the header portion of
+          core-header-panel and it is positioned below the toolbar (see
+          https://www.polymer-project.org/0.5/docs/elements/core-header-panel.html)
+        -->
         <uproxy-bubble class='core-header' on-closed='{{ closedWelcome }}' active='{{ !model.globalSettings.hasSeenWelcome && !statsDialogOrBubbleOpen }}'>
           <h3>Welcome to uProxy!</h3>
           <p>
