--- a/src/generic_ui/polymer/roster-group.html
+++ b/src/generic_ui/polymer/roster-group.html
@@ -6,9 +6,12 @@
 
   <template>
     <style>
+    :host {
+      text-align: start;
+    }
     .header {
       font-size: 13px;
-      margin: 24px 0px 6px 24px;
+      margin: 24px 24px 6px 24px;
       color: rgba(0,0,0,0.34);
       font-weight: 500;
     }
