--- a/src/generic_ui/polymer/contact.html
+++ b/src/generic_ui/polymer/contact.html
@@ -27,7 +27,7 @@
     .nameRow {
       white-space: nowrap;
       text-overflow: ellipsis;
-      margin: 18px 0px 0px 24px;
+      margin: 18px 24px 0px 24px;
       cursor: pointer;
     }
     .nameRow core-icon {
@@ -59,19 +59,18 @@
     .name {
       font-size: 16px;
       color: rgba(0,0,0,0.87);
-      padding-left: 18px;
+      padding: 0px 18px;
       overflow: hidden;
       text-overflow: ellipsis;
     }
     .accessIcon {
-      padding-right: 18px;
       width: 20px;
       min-width: 20px;
       height: 20px;
     }
     core-collapse {
       margin-left: 80px; /* line up with left bound of contact name */
-      margin-right: 48px;
+      margin-right: 80px;
       margin-top: 0px; /* line details closer to bottom of contact name */
       color: rgba(0,0,0,0.54);
     }
@@ -92,8 +91,7 @@
       height: 16px;
       width: 16px;
       color: rgba(0,0,0,0.54);
-      margin-top: 2px;
-      margin-right: 2px;
+      margin: 0px 2px;
     }
     core-icon[icon=check] {
       color: #009688;
