We need to call update for the settings to be visible.

--- a/src/generic_ui/polymer/advanced-settings.html
+++ b/src/generic_ui/polymer/advanced-settings.html
@@ -110,7 +110,7 @@
         <div id='formContainer' flex>
           <p class='inputLabel'>Edit your settings below</p>
           <paper-input-decorator id='advancedSettingsDecorator' label='Edit your settings'>
-            <paper-autogrow-textarea id='advancedSettingsPaperTextarea' target='advancedSettingsInput'>
+            <paper-autogrow-textarea id='advancedSettingsPaperTextarea'>
               <textarea id='advancedSettingsInput'
                      value='{{ settings }}'>
               </textarea>
