Fix formating with long lines.

--- a/src/generic_ui/polymer/advanced-settings.html
+++ b/src/generic_ui/polymer/advanced-settings.html
@@ -110,7 +110,7 @@
         <div id='formContainer' flex>
           <p class='inputLabel'>Edit your settings below</p>
           <paper-input-decorator id='advancedSettingsDecorator' label='Edit your settings'>
-            <paper-autogrow-textarea id='advancedSettingsPaperTextarea'>
+            <paper-autogrow-textarea id='advancedSettingsPaperTextarea' class='font::inherit'>
               <textarea id='advancedSettingsInput'
                      value='{{ settings }}'>
               </textarea>
