Eliminating unused progress and fixing spurious scrollbar.

--- a/src/generic_ui/polymer/advanced-settings.html
+++ b/src/generic_ui/polymer/advanced-settings.html
@@ -29,7 +29,7 @@
       padding: 30px;
       text-align: left;
       color: #009688;
-      overflow: auto;
+      overflow: hidden;
     }
     .inputLabel {
       font-weight: bold;
@@ -70,9 +70,6 @@
     }
     paper-input-decorator {
       font-size: 1.4em;
-    }
-    paper-progress::shadow #activeProgress {
-      background-color: #009688;
     }
     #advancedSettingsDecorator {
       height: 350px;
