Setting back to overflow: auto until we get a better solution.

--- a/src/generic_ui/polymer/advanced-settings.html
+++ b/src/generic_ui/polymer/advanced-settings.html
@@ -29,7 +29,7 @@
       padding: 30px;
       text-align: left;
       color: #009688;
-      overflow: hidden;
+      overflow: auto;
     }
     .inputLabel {
       font-weight: bold;
