--- a/src/generic_ui/polymer/bubble.html
+++ b/src/generic_ui/polymer/bubble.html
@@ -62,7 +62,7 @@ uproxy-bubble::shadow #done {
     #actions {
       text-align: right;
     }
-    #done {
+    paper-button#done {
       background-color: #222;
     }
 
