Add comment with sample usage

--- a/src/generic_ui/polymer/i18next-element.html
+++ b/src/generic_ui/polymer/i18next-element.html
@@ -11,5 +11,12 @@
 <link rel="import" href="../../bower/polymer/polymer.html">
 
 <polymer-element name="i18next-element">
+  <!--
+  <template>
+    Example usage:
+    <p>{{ $$('Bad') }}</p>
+    <p>{{ $$('Hello', {name: 'Lucy' }) }}</p>
+  </template>
+  -->
   <script src='i18next-element.js'></script>
 </polymer-element>
