Move i18n code into its own file. Start messages.js file.

--- a/src/generic_ui/polymer/contact.html
+++ b/src/generic_ui/polymer/contact.html
@@ -110,7 +110,7 @@
         class='nameRow frame {{ isOnline ? "online" : "offline" }}'
         center horizontal layout>
       <img class='avatar' src='{{ contact.imageData }}' />
-      <div class='name'>{{ contact.name }}</div>
+      <div class='name' dir='auto'>{{ contact.name }}</div>
 
       <div flex class="iconWrapper">
         <core-icon icon="open-in-new"
@@ -142,13 +142,13 @@
         <div horizontal layout hidden?='{{ hasInstance(ui.instanceTryingToGetAccessFrom) }}'>
           <core-icon icon='check'></core-icon>
           <p class='preButtonText' flex>
-            {{ contact.name || contact.userId }} has granted you access
+           {{ 'grantedYouAccess' | $$({name: contact.name || contact.userId}) }}
           </p>
         </div>
         <div horizontal layout hidden?='{{ !hasInstance(ui.instanceTryingToGetAccessFrom) }}'>
           <core-icon icon='query-builder'></core-icon>
           <p class='preButtonText' flex>
-            Trying to connect to {{ contact.name || contact.userId }}
+            {{ 'tryingToConnect' | $$({name: contact.name || contact.userId}) }}
           </p>
         </div>
         <template repeat='{{ instance in contact.offeringInstances }}' vertical layout>
@@ -164,27 +164,27 @@
         <div horizontal layout>
           <core-icon icon='query-builder'></core-icon>
           <p class='preButtonText' flex>
-            Asking for access
+            {{ 'askingForAccess' | $$ }}
           </p>
         </div>
-        <p class='preButtonDetailedText'>You will be able to get access when {{ contact.name }} accepts.</p>
+        <p class='preButtonDetailedText'>{{ 'waitingForAccess' | $$({name: contact.name}) }}</p>
         <paper-button class='grey' raised on-tap='{{ cancelRequest }}'>Cancel Request</paper-button>
       </div>
 
       <div hidden?='{{ contact.gettingConsentState != GettingConsentState.REMOTE_OFFERED_LOCAL_NO_ACTION }}'>
-        <p class='preButtonText'>They've offered you access.</p>
-        <paper-button raised on-tap='{{ request }}'>Accept Offer</paper-button>
-        <paper-button raised on-tap='{{ ignoreOffer }}'>Ignore</paper-button>
+        <p class='preButtonText'>{{ 'offeredYouAccess' | $$ }}</p>
+        <paper-button raised on-tap='{{ request }}'>{{ 'acceptOffer' | $$ }}</paper-button>
+        <paper-button raised on-tap='{{ ignoreOffer }}'>{{ 'ignore' | $$ }}</paper-button>
       </div>
 
       <div hidden?='{{ contact.gettingConsentState != GettingConsentState.REMOTE_OFFERED_LOCAL_IGNORED }}'>
-        <p class='preButtonText'>They've offered you access.</p>
-        <paper-button class='grey' raised on-tap='{{ unignoreOffer }}'>Stop ignoring offers</paper-button>
+        <p class='preButtonText'>{{ 'offeredYouAccess' | $$ }}</p>
+        <paper-button class='grey' raised on-tap='{{ unignoreOffer }}'>{{ 'stopIgnoringOffers' | $$ }}</paper-button>
       </div>
 
       <div hidden?='{{ contact.gettingConsentState != GettingConsentState.NO_OFFER_OR_REQUEST }}'>
         <paper-button raised on-tap='{{ request }}'>
-          Ask for access
+          {{ 'askForAccess' | $$ }}
         </paper-button>
       </div>
 
@@ -195,33 +195,33 @@
       opened='{{ contact.shareExpanded }}'>
 
       <div hidden?='{{ contact.sharingConsentState != SharingConsentState.LOCAL_OFFERED_REMOTE_ACCEPTED }}'>
-        <p class='preButtonText'>You've given them access.</p>
-        <paper-button class='grey' raised on-tap='{{ cancelOffer }}'>Revoke Access</paper-button>
+        <p class='preButtonText'>{{ 'grantedFriendAccess' | $$ }}</p>
+        <paper-button class='grey' raised on-tap='{{ cancelOffer }}'>{{ 'revokeAccess' | $$ }}</paper-button>
       </div>
 
       <div hidden?='{{ contact.sharingConsentState != SharingConsentState.LOCAL_OFFERED_REMOTE_NO_ACTION }}'>
-        <paper-button class='grey' raised on-tap='{{ cancelOffer }}'>Cancel Offer</paper-button>
+        <paper-button class='grey' raised on-tap='{{ cancelOffer }}'>{{ 'cancelOffer' | $$ }}</paper-button>
       </div>
 
       <div hidden?='{{ contact.sharingConsentState != SharingConsentState.REMOTE_REQUESTED_LOCAL_NO_ACTION }}'>
         <div horizontal layout>
           <core-icon icon='mail'></core-icon>
           <p class='preButtonText' flex>
-            {{ 'Access' | $$({name: contact.name}) }}
+            {{ 'friendRequestsAccess' | $$({name: contact.name}) }}
           </p>
         </div>
-        <paper-button raised on-tap='{{ offer }}'>Grant</paper-button>
-        <paper-button raised on-tap='{{ ignoreRequest }}'>Ignore</paper-button>
+        <paper-button raised on-tap='{{ offer }}'>{{ 'grant' | $$ }}</paper-button>
+        <paper-button raised on-tap='{{ ignoreRequest }}'>{{ 'ignore' | $$ }}</paper-button>
       </div>
 
       <div hidden?='{{ contact.sharingConsentState != SharingConsentState.REMOTE_REQUESTED_LOCAL_IGNORED }}'>
-        <p class='preButtonText'>They requested access through you.</p>
-        <paper-button class='grey' raised on-tap='{{ unignoreRequest }}'>Stop ignoring requests</paper-button>
+        <p class='preButtonText'>{{ 'friendRequestedAccess' | $$ }}</p>
+        <paper-button class='grey' raised on-tap='{{ unignoreRequest }}'>{{ 'stopIgnoringRequests' | $$ }}</paper-button>
       </div>
 
       <div hidden?='{{ contact.sharingConsentState != SharingConsentState.NO_OFFER_OR_REQUEST }}'>
-        <p class='preButtonText'>You have not granted them access.</p>
-        <paper-button raised on-tap='{{ offer }}'>Offer Access</paper-button>
+        <p class='preButtonText'>{{ 'accessNotGranted' | $$ }}</p>
+        <paper-button raised on-tap='{{ offer }}'>{{ 'offerAccess' | $$ }}</paper-button>
       </div>
     </core-collapse> <!-- end of shareControls -->
 
