--- a/src/generic_ui/polymer/root.html
+++ b/src/generic_ui/polymer/root.html
@@ -1,4 +1,5 @@
 <link rel="import" href="../../bower/polymer/polymer.html">
+<link rel="import" href="i18n-filter.html">
 <link rel="import" href="../../bower/core-signals/core-signals.html">
 <link rel="import" href="../../bower/core-header-panel/core-header-panel.html">
 <link rel="import" href="../../bower/core-drawer-panel/core-drawer-panel.html">
