--- a/src/generic_ui/polymer/bubble.html
+++ b/src/generic_ui/polymer/bubble.html
@@ -91,7 +91,7 @@ uproxy-bubble::shadow #done {
           <content></content>
 
           <div id='actions'>
-            <paper-button id='done' on-tap='{{ close }}'>Done</paper-button>
+            <paper-button id='done' on-tap='{{ close }}'>{{ 'done' | $$ }}</paper-button>
           </div>
         </div>
       </div>
